# icp-icrc3-evm-adapter

./: .gitignore  README.md
.github/workflows/: checks.golem.yml  publish-earthly.yml  publish-subq-indexer.yml
canisters/counter_canister/: .env.example  Cargo.toml  canister_ids.json  dfx.json
canisters/dex_canister/: Cargo.toml  README.md  canister_ids.json  dfx.json
canisters/dex_canister/src/dex_canister_backend/: Cargo.toml  dex_canister_backend.did
canisters/dex_canister/src/dex_canister_backend/src/: constants.rs  icrc3.rs  lib.rs  logging.rs  state.rs  types.rs
canisters/logger_canister/: .env.example  Cargo.toml  README.md  canister_ids.json  dfx.json
canisters/logger_canister/src/logger_canister_backend/: Cargo.toml  logger_canister_backend.did
canisters/logger_canister/src/logger_canister_backend/src/: icrc3.rs  lib.rs  logging.rs  state.rs  types.rs  utils.rs
docs/: _category_.json  diagram.md  overview.md  setup-and-deployment.md  usage.md
docs/components/: _category_.json  counter-canister.md  dex-canister.md  evm-adapter-proxy.md  logger-canister.md  subquery-indexer.md
docs/getting-started/: _category_.json  architecture.md  overview.md
docs/guides/: _category_.json  setup-and-deployment.md  usage.md
evm-adapter-proxy/: .gitignore  .golangci.yml  Earthfile  Makefile  Makefile.local.mk  Makefile.settings.mk  README.golem.md  config.example.yaml  go.mod  go.sum  main.go  zondax.yaml
subq-indexer/: .earthlyignore  .gitignore  README.md  docker-compose.yml  package.json  project.ts  schema.graphql  zondax.yaml
(+42 files in other folders)
